apps/home-assistant/matter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-matter-server
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - protocol: TCP
      port: 5580
      targetPort: 5580
