apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${EXTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "home-assistant.${EXTERNAL_DOMAIN}"
      secretName: "home-assistant-tls"
  rules:
    - host: "home-assistant.${EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
